[gd_scene load_steps=3 format=3 uid="uid://dux8jo7hpy0rf"]

[ext_resource type="Script" uid="uid://bejqlo8lraiw0" path="res://game-objects/network/net-node/traffic-light/traffic-light.gd" id="1_38h53"]
[ext_resource type="PackedScene" uid="uid://cx5r114fjgwq7" path="res://game-objects/light/light.tscn" id="2_38h53"]

[node name="TrafficLight" type="Node2D"]
script = ExtResource("1_38h53")

[node name="Body" type="Polygon2D" parent="."]
color = Color(0.745098, 0.54902, 0, 1)
polygon = PackedVector2Array(-4.93425, -9.90919, -4.67969, -10, 4.70313, -10, 4.92281, -9.9255, 5, -9.63281, 5, 9.71875, 4.91981, 9.91387, 4.69531, 10, -4.80469, 10, -4.95269, 9.91387, -5, 9.72656, -5, -9.65625)

[node name="RedLight" parent="." instance=ExtResource("2_38h53")]
position = Vector2(0, -6)
inactive_color = Color(0.352941, 0.0862745, 0, 1)
active_color = Color(1, 0.141176, 0, 1)
radius = 2.0

[node name="YellowLight" parent="." instance=ExtResource("2_38h53")]
inactive_color = Color(0.313726, 0.258824, 0, 1)
active_color = Color(1, 0.823529, 0, 1)
radius = 2.0

[node name="GreenLight" parent="." instance=ExtResource("2_38h53")]
position = Vector2(0, 6)
inactive_color = Color(0.054902, 0.196078, 0, 1)
active_color = Color(0.141176, 0.784314, 0, 1)
radius = 2.0
